--- a/notebook/MLP_ofdm_simulation.ipynb
+++ b/notebook/MLP_ofdm_simulation.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMMvDVRrXs4O7NsYf4Cg+6O",
+      "authorship_tag": "ABX9TyNLW6MzMpa07gkHPLI22KCE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1438,6 +1438,9 @@
       "cell_type": "code",
       "source": [
         "import scipy\n",
+        "\n",
+        "# Compare between deep learning and spline interpolation for channel estimation\n",
+        "\n",
         "def channelEstimate(OFDM_demod):\n",
         "    pilots = OFDM_demod[pilotCarriers]  # extract the pilot values from the RX signal\n",
         "    # OFDM_demod[f] = Hest[f] * OFDM_symbol[f]\n",
